# phala-blockchain

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  :wq  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  Makefile  README.md  azure-pipelines.yml  docker_cheatsheet.md  et --hard HEAD~2  gramine.Dockerfile  hw.Dockerfile  poller.Dockerfile  run-parachain.md  rust-toolchain  rust-toolchain.toml  sw.Dockerfile  w3a.Dockerfile
common/types/: Cargo.toml
common/types/src/: contract.rs  lib.rs  message.rs  pruntime.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: aead.rs  ecdh.rs  ecdh_key.rs  identity_key.rs  lib.rs  master_key.rs  secp256k1.rs  sr25519.rs
crates/immutable_env/: Cargo.toml
crates/immutable_env/src/: lib.rs
crates/phactory/: Cargo.toml
crates/phactory/api/: .gitignore  Cargo.toml  build.rs
crates/phactory/pal/: Cargo.toml
crates/phactory/src/: benchmark.rs  bin_api_service.rs  cert.rs  checkpoint.rs  contract_result.rs  im_helpers.rs  lib.rs  nts.rs  pod_registry.rs  prpc_service.rs  rpc_types.rs  secret_channel.rs  side_task.rs  storage.rs  types.rs  utils.rs
crates/phactory/tests/: test_serde.rs
crates/phala-crypto/: Cargo.toml
crates/phala-crypto/src/: aead.rs  ecdh.rs  key_share.rs  lib.rs  sr25519.rs
crates/phala-mq/: Cargo.toml
crates/phala-mq/derive/: Cargo.toml
crates/phala-mq/src/: checkpoint_helper.rs  dispatcher.rs  lib.rs  send_queue.rs  simple_mpsc.rs  types.rs
crates/phala-mq/tests/: test_msg.rs  tests.rs
crates/phala-node-rpc-ext/: Cargo.toml
crates/phala-node-rpc-ext/src/: lib.rs  mq_seq.rs  storage_changes.rs
crates/phala-node-rpc-ext/types/: Cargo.toml
crates/phala-scheduler/: Cargo.toml
crates/phala-scheduler/src/: lib.rs  request_scheduler.rs  task_scheduler.rs
crates/phala-serde-more/: Cargo.toml
crates/phala-serde-more/src/: key_bytes.rs  lib.rs  option_key_bytes.rs  pubkey_bytes.rs  scale_bytes.rs  scale_hex.rs  sr25519_hex.rs  sr25519_public_hex.rs  vec_key_bytes.rs
crates/phala-trie-storage/: Cargo.toml
crates/phala-trie-storage/src/: adapter.rs  fused.rs  kvdb.rs  lib.rs  memdb.rs  pkvdb.rs  ser.rs
crates/phala-trie-storage/tests/: test_state_root.rs
crates/phala-types/: Cargo.toml
crates/phala-types/src/: contract.rs  lib.rs
crates/phaxt/: Cargo.toml
crates/phaxt/metadata_files/: khala_metadata.scale  kusama_metadata.scale  phala_standalone_metadata.scale
crates/phaxt/src/: chain_api.rs  convert.rs  dynamic.rs  extra.rs  khala_config.rs  lib.rs  rpc.rs  workaround.rs
crates/pink/: Cargo.toml
crates/pink/bins/: system.wasm
crates/pink/capi/: Cargo.toml  build.rs  expand.rs
crates/pink/chain-extension/: Cargo.toml
crates/pink/loader/: Cargo.toml
crates/pink/macro/: Cargo.toml
crates/pink/pink/: Cargo.toml  README.md
crates/pink/pink-extension/: Cargo.toml  README.md
crates/pink/pink-extension-runtime/: Cargo.toml
crates/pink/pink-s3/: Cargo.toml  README.md
crates/pink/pink-sidevm/: Cargo.toml
crates/pink/pink-sidevm-env/: Cargo.toml
crates/pink/pink-sidevm-macro/: Cargo.toml
crates/pink/pink-types/: Cargo.toml
crates/pink/runner/: Cargo.toml
crates/pink/runtime/: Cargo.toml  README.md  cov.sh
crates/pink/src/: contract.rs  export_fixtures.rs  lib.rs  local_cache.rs  runtime.rs  storage.rs  types.rs
crates/pink/tests/: test_pink_contract.rs
crates/pink/unittests/: Cargo.toml  lib.rs
crates/pkvdb/: Cargo.toml
crates/pkvdb/src/: backend.rs  db_impl.rs  gramine_env.rs  leveldb.rs  lib.rs  phaladb.rs  raw.rs  ser.rs  snapshot.rs  table_reader.rs  transactional.rs  trie.rs  version_set.rs
crates/podtracker/: Cargo.toml  build.rs
crates/podtracker/proto/: podtracker_rpc.proto
crates/podtracker/src/: lib.rs  proto_generated.rs  tracker.rs
crates/prpc/: Cargo.toml
crates/prpc-build/: Cargo.toml
crates/prpc-build/src/: client.rs  codec_patch.rs  lib.rs  prost.rs  protos_codec_extension.rs  server.rs
crates/prpc/src/: lib.rs
crates/reqwest-env-proxy/: Cargo.toml
crates/reqwest-env-proxy/src/: lib.rs
crates/sgx-attestation/: Cargo.toml
crates/sgx-attestation/sample/: dcap_quote  dcap_quote_collateral  ias_attestation.json
crates/sgx-attestation/src/: dcap.rs  gramine.rs  ias.rs  lib.rs
crates/trie-storage/: Cargo.toml
crates/trie-storage/src/: lib.rs  ser.rs
crates/trie-storage/tests/: test_state_root.rs
diem/types/: Cargo.toml
diem/types/src/: access_path.rs  account_address.rs  account_state.rs  account_state_blob.rs  block_info.rs  block_metadata.rs  chain_id.rs  contract_event.rs  epoch_change.rs  event.rs  lib.rs  mempool_status.rs  move_resource.rs  proptest_types.rs  validator_config.rs  validator_verifier.rs  waypoint.rs  write_set.rs
executor/: Cargo.toml
native-nostd-hasher/: Cargo.toml
native-nostd-hasher/src/: lib.rs
node/: Cargo.toml  build.rs  chain.json
node/runtime/: Cargo.toml
node/runtime/sample/: report  report_signature
node/runtime/src/: execution.rs  lib.rs  template.rs
node/scripts/: console.sh  insert-keys.sh  notes.md
node/scripts/ccwrapper/: ar  clang  config
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  service.rs
node/tests/: check_block_works.rs  inspect_works.rs  purge_chain_works.rs  running_the_node_and_interrupt.rs
phost/: .commit  Cargo.toml  build.rs
phost/scripts/: console.sh
phost/src/: chain_client.rs  error.rs  main.rs  msg_sync.rs  pruntime_client.rs  runtimes.rs  types.rs  utils.rs
rpc/: Cargo.toml
rpc/src/: lib.rs
runtime/: Cargo.toml  build.rs
runtime/src/: constants.rs  impls.rs  lib.rs
substrate-subxt/: Cargo.toml
substrate-subxt/src/: lib.rs  metadata.rs  rpc.rs
substrate-subxt/src/frame/: balances.rs  system.rs
subxt/: Cargo.toml  README.md
subxt/client/: Cargo.toml
subxt/client/src/: lib.rs
subxt/proc-macro/: Cargo.toml
subxt/proc-macro/src/: module.rs
subxt/src/: error.rs  events.rs  lib.rs  metadata.rs  rpc.rs  runtimes.rs
subxt/src/extrinsic/: extra.rs  mod.rs
subxt/src/frame/: contracts.rs  staking.rs  system.rs
subxt/test-node/: Cargo.toml
subxt/test-node/runtime/: Cargo.toml
(+1452 files in other folders)
