[profile.release]
panic = "abort"
opt-level = 3

# make sure dev builds with backtrace do
# not slow us down
[profile.dev.package.backtrace]
inherits = "release"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[profile.testnet]
inherits = "release"
debug = 1 # debug symbols are useful for profilers
debug-assertions = true
overflow-checks = true

[workspace]
resolver = "2"
metadata.dylint.libraries = [
    { git = "https://github.com/Phala-Network/dylint-rules.git", pattern = "rules/*" },
]

exclude = [
	"subxt",
	"standalone/pruntime",
	"standalone/prouter",
	"standalone/crate-version",
	"crates/pink-drivers/system",
	"crates/pink-drivers/sidevm_deployer",
	"crates/pink-drivers/tokenomic",
	"e2e/contracts",
]

members = [
	"standalone/executor",
	"standalone/rpc",
	"standalone/node",
	"standalone/runtime",
	"standalone/pherry",
	"standalone/prb",
	"standalone/replay",
	"standalone/headers-cache",
	"standalone/justification-validate",
	"standalone/sfq-test",
	"standalone/phat-poller",
	"crates/phala-trie-storage",
	"crates/phala-mq",
	"crates/phala-crypto",
	"crates/phala-node-rpc-ext",
	"crates/phala-types",
	"crates/phala-git-revision",
	"crates/prpc",
	"crates/prpc-build",
	"crates/phactory",
	"crates/phactory/api",
	"crates/phactory/pal",
	"crates/phala-types",
	"crates/phala-async-executor",
	"crates/phala-allocator",
	"crates/phala-sanitized-logger",
	"crates/phala-wasm-checker",
	"crates/phala-clap-parsers",
	"crates/phala-wasmer-tunables",
	"crates/phala-rocket-middleware",
	"crates/pink/runner",
	"crates/pink/runtime",
	"crates/pink/runtime/unittests",
	"crates/pink/capi",
	"crates/pink/macro",
	"crates/pink/pink-types",
	"crates/pink/pink-extension",
	"crates/pink/pink-extension-runtime",
	"crates/pink-libs/s3",
	"crates/pink-libs/utils",
	"crates/pink-libs/subrpc",
	"crates/pink-libs/kv-session",
	"crates/phaxt",
	"crates/pink/pink-extension/macro",
	"crates/sidevm/host-runtime",
	"crates/sidevm/env",
	"crates/sidevm/macro",
	"crates/sidevm/sidevm",
	"crates/phala-serde-more",
	"crates/rustfmt-snippet",
	"crates/reqwest-env-proxy",
	"crates/phala-scheduler",
	"crates/this-crate",
	"crates/sgx-attestation",
	"crates/type-info-stringify",
	"pallets/phala",
	"pallets/phala/mq-runtime-api",
	"pallets/offchain-rollup",
	"scripts/debug-cli"
]

[workspace.dependencies]
# Frontier Client
fc-api = { git = "https://github.com/kvinwang/frontier", branch = "polkadot-v1.5.0" }
fc-cli = { git = "https://github.com/kvinwang/frontier", branch = "polkadot-v1.5.0", default-features = false }
fc-consensus = { git = "https://github.com/kvinwang/frontier", branch = "polkadot-v1.5.0" }
fc-db = { git = "https://github.com/kvinwang/frontier", branch = "polkadot-v1.5.0", default-features = false }
fc-mapping-sync = { git = "https://github.com/kvinwang/frontier", branch = "polkadot-v1.5.0", default-features = false }
fc-rpc = { git = "https://github.com/kvinwang/frontier", branch = "polkadot-v1.5.0", default-features = false }
fc-rpc-core = { git = "https://github.com/kvinwang/frontier", branch = "polkadot-v1.5.0" }
fc-storage = { git = "https://github.com/kvinwang/frontier", branch = "polkadot-v1.5.0" }
# Frontier Primitive
fp-account = { git = "https://github.com/kvinwang/frontier", branch = "polkadot-v1.5.0", default-features = false }
fp-consensus = { git = "https://github.com/kvinwang/frontier", branch = "polkadot-v1.5.0", default-features = false }
fp-dynamic-fee = { git = "https://github.com/kvinwang/frontier", branch = "polkadot-v1.5.0", default-features = false }
fp-ethereum = { git = "https://github.com/kvinwang/frontier", branch = "polkadot-v1.5.0", default-features = false }
fp-evm = { git = "https://github.com/kvinwang/frontier", branch = "polkadot-v1.5.0", default-features = false }
fp-rpc = { git = "https://github.com/kvinwang/frontier", branch = "polkadot-v1.5.0", default-features = false }
fp-self-contained = { git = "https://github.com/kvinwang/frontier", branch = "polkadot-v1.5.0", default-features = false }
fp-storage = { git = "https://github.com/kvinwang/frontier", branch = "polkadot-v1.5.0", default-features = false }
# Frontier FRAME
pallet-base-fee = { git = "https://github.com/kvinwang/frontier", branch = "polkadot-v1.5.0", default-features = false }
pallet-dynamic-fee = { git = "https://github.com/kvinwang/frontier", branch = "polkadot-v1.5.0", default-features = false }
pallet-ethereum = { git = "https://github.com/kvinwang/frontier", branch = "polkadot-v1.5.0", default-features = false }
pallet-evm = { git = "https://github.com/kvinwang/frontier", branch = "polkadot-v1.5.0", default-features = false }
pallet-evm-chain-id = { git = "https://github.com/kvinwang/frontier", branch = "polkadot-v1.5.0", default-features = false }
pallet-evm-precompile-modexp = { git = "https://github.com/kvinwang/frontier", branch = "polkadot-v1.5.0", default-features = false }
pallet-evm-precompile-sha3fips = { git = "https://github.com/kvinwang/frontier", branch = "polkadot-v1.5.0", default-features = false }
pallet-evm-precompile-simple = { git = "https://github.com/kvinwang/frontier", branch = "polkadot-v1.5.0", default-features = false }
pallet-evm-test-vector-support = { git = "https://github.com/kvinwang/frontier", branch = "polkadot-v1.5.0" }
pallet-hotfix-sufficients = { git = "https://github.com/kvinwang/frontier", branch = "polkadot-v1.5.0", default-features = false }
# Frontier Template
frontier-template-runtime = { git = "https://github.com/kvinwang/frontier", branch = "polkadot-v1.5.0", default-features = false }
# Frontier Utility
precompile-utils = { git = "https://github.com/kvinwang/frontier", branch = "polkadot-v1.5.0", default-features = false }

[patch.crates-io]
# TODO.kevin: Move back to crates.io once it released 1.0
derive_more = { version = "0.99.17", git = "https://github.com/JelteF/derive_more" }

ring = { git = "https://github.com/jasl/ring-xous", branch = "better-wasm32-support" }

sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.5.0" }
sp-core-hashing = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.5.0" }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.5.0" }
sp-runtime-interface = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.5.0" }

# For pink-extension-runtime, it will introduce Substrate from crates-io which usually different with polkadot-branch
pink-extension = { path = "crates/pink/pink-extension" }
pink-extension-runtime = { path = "crates/pink/pink-extension-runtime" }
