[package]
name = "node-executor"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate node implementation in Rust."
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4" }
node-primitives = { version = "2.0.0", path = "../substrate/bin/node/primitives" }
node-runtime = { version = "2.0.0", package = "phala-node-runtime", path = "../runtime" }
sc-executor = { version = "0.8.0", path = "../substrate/client/executor" }
sp-core = { version = "2.0.0", path = "../substrate/primitives/core" }
sp-keystore = { version = "0.8.0", path = "../substrate/primitives/keystore" }
sp-io = { version = "2.0.0", path = "../substrate/primitives/io" }
sp-state-machine = { version = "0.8.0", path = "../substrate/primitives/state-machine" }
sp-trie = { version = "2.0.0", path = "../substrate/primitives/trie" }
trie-root = "0.16.0"
frame-benchmarking = { version = "2.0.0", path = "../substrate/frame/benchmarking" }

[dev-dependencies]
criterion = "0.3.0"
frame-support = { version = "2.0.0", path = "../substrate/frame/support" }
frame-system = { version = "2.0.0", path = "../substrate/frame/system" }
# node-testing = { version = "2.0.0", path = "../testing" }
pallet-balances = { version = "2.0.0", path = "../substrate/frame/balances" }
pallet-contracts = { version = "2.0.0", path = "../substrate/frame/contracts" }
pallet-grandpa = { version = "2.0.0", path = "../substrate/frame/grandpa" }
pallet-im-online = { version = "2.0.0", path = "../substrate/frame/im-online" }
pallet-indices = { version = "2.0.0", path = "../substrate/frame/indices" }
pallet-session = { version = "2.0.0", path = "../substrate/frame/session" }
pallet-timestamp = { version = "2.0.0", path = "../substrate/frame/timestamp" }
pallet-transaction-payment = { version = "2.0.0", path = "../substrate/frame/transaction-payment" }
pallet-treasury = { version = "2.0.0", path = "../substrate/frame/treasury" }
sp-application-crypto = { version = "2.0.0", path = "../substrate/primitives/application-crypto" }
sp-runtime = { version = "2.0.0", path = "../substrate/primitives/runtime" }
sp-externalities = { version = "0.8.0", path = "../substrate/primitives/externalities" }
substrate-test-client = { version = "2.0.0", path = "../substrate/test-utils/client" }
wat = "1.0"

[features]
wasmtime = [
	"sc-executor/wasmtime",
]
wasmi-errno = [
	"sc-executor/wasmi-errno",
]
stress-test = []

[[bench]]
name = "bench"
harness = false
