[package]
name = "node-executor"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate node implementation in Rust."
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4" }
node-primitives = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
node-runtime = { version = "2.0.0", package = "phala-node-runtime", path = "../runtime" }
sc-executor = { version = "0.8.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-core = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-keystore = { version = "0.8.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-io = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-state-machine = { version = "0.8.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-trie = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
trie-root = "0.16.0"
frame-benchmarking = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }

[dev-dependencies]
criterion = "0.3.0"
frame-support = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
frame-system = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
# node-testing = { version = "2.0.0", path = "../testing" }
pallet-balances = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-contracts = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-grandpa = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-im-online = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-indices = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-session = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-timestamp = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-transaction-payment = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-treasury = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-application-crypto = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-externalities = { version = "0.8.0", git = "https://github.com/paritytech/substrate", branch = "master" }
substrate-test-client = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
wat = "1.0"

[features]
wasmtime = [
	"sc-executor/wasmtime",
]
wasmi-errno = [
	"sc-executor/wasmi-errno",
]
stress-test = []

[[bench]]
name = "bench"
harness = false
