[package]
name = "node-executor"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate node implementation in Rust."
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4" }
node-primitives = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
node-runtime = { version = "2.0.0", package = "phala-node-runtime", path = "../runtime" }
sc-executor = { version = "0.8.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-core = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-keystore = { version = "0.8.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-io = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-state-machine = { version = "0.8.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-trie = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
trie-root = "0.16.0"
frame-benchmarking = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }

[dev-dependencies]
criterion = "0.3.0"
frame-support = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
frame-system = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
# node-testing = { version = "2.0.0", path = "../testing" }
pallet-balances = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
pallet-contracts = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
pallet-grandpa = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
pallet-im-online = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
pallet-indices = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
pallet-session = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
pallet-timestamp = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
pallet-transaction-payment = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
pallet-treasury = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-application-crypto = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-runtime = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-externalities = { version = "0.8.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
substrate-test-client = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
wat = "1.0"

[features]
wasmtime = [
	"sc-executor/wasmtime",
]
wasmi-errno = [
	"sc-executor/wasmi-errno",
]
stress-test = []

[[bench]]
name = "bench"
harness = false
