[package]
authors = ['Phala.network']
edition = '2018'
name = 'native-nostd-hasher'
version = "2.0.0"
license = "Apache 2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "Hasher for nostd env"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
hash256-std-hasher = { version = "0.15.2", default-features = false }
sp-core = { version = "2.0.0", git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1", features = ["full_crypto"] }
sp-trie = { version = "2.0.0", git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-runtime = { version = "2.0.0", git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }

[features]
default = []
