[package]
authors = ['Phala.network']
edition = '2021'
name = 'native-nostd-hasher'
version = "3.0.0"
license = "Apache 2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "Hasher for nostd env"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
hash256-std-hasher = { version = "0.15.2", default-features = false }
sp-core = { path = "../substrate/primitives/core", default-features = false }
sp-trie = { path = "../substrate/primitives/trie", default-features = false }
sp-runtime = { path = "../substrate/primitives/runtime", default-features = false }

[features]
default = []
